fix: remove y overflow attr

--- a/packages/ui/styles.css
+++ b/packages/ui/styles.css
@@ -11,7 +11,6 @@
 
   body {
     background-color: #000;
-    overflow-y: hidden;
   }
 }
 
